--- a/pages/Detail_Page5/Detail_Page5.wxss
+++ b/pages/Detail_Page5/Detail_Page5.wxss
@@ -158,5 +158,14 @@
   bottom:0;
 }
 .input{
+  border: gray;
   width: 80%;
+  height: 30rpx;
+}
+
+.subcomment{
+  border-top: 2rpx solid  #f1f1f1;
+}
+.subcomment_title{
+
 }
